--- a/环境监测仪转接板固件程序/STM32F030C8_RTX/STM32F030C8_RTX.ioc
+++ b/环境监测仪转接板固件程序/STM32F030C8_RTX/STM32F030C8_RTX.ioc
@@ -12,25 +12,23 @@ Mcu.IP6=USART2
 Mcu.IPNb=7
 Mcu.Name=STM32F030C8Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PF0-OSC_IN
-Mcu.Pin1=PF1-OSC_OUT
-Mcu.Pin10=PF7
-Mcu.Pin11=PA14
-Mcu.Pin12=PA15
-Mcu.Pin13=PB3
-Mcu.Pin14=PB4
-Mcu.Pin15=PB5
-Mcu.Pin16=VP_SYS_VS_Systick
-Mcu.Pin17=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin2=PA1
-Mcu.Pin3=PA2
-Mcu.Pin4=PA3
-Mcu.Pin5=PA5
-Mcu.Pin6=PA9
-Mcu.Pin7=PA10
-Mcu.Pin8=PA13
-Mcu.Pin9=PF6
-Mcu.PinsNb=18
+Mcu.Pin0=PA1
+Mcu.Pin1=PA2
+Mcu.Pin10=PB4
+Mcu.Pin11=PB5
+Mcu.Pin12=PB6
+Mcu.Pin13=PB7
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin2=PA3
+Mcu.Pin3=PA5
+Mcu.Pin4=PA9
+Mcu.Pin5=PA10
+Mcu.Pin6=PA13
+Mcu.Pin7=PA14
+Mcu.Pin8=PA15
+Mcu.Pin9=PB3
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030C8Tx
@@ -84,6 +82,16 @@ PB4.Signal=SPI1_MISO
 PB5.Locked=true
 PB5.Mode=Full_Duplex_Master
 PB5.Signal=SPI1_MOSI
+PB6.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PB6.GPIO_Label=SI4438_nIRQ
+PB6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB6.Locked=true
+PB6.Signal=GPXTI6
+PB7.GPIOParameters=GPIO_Speed,GPIO_Label
+PB7.GPIO_Label=SI4438_SDN
+PB7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB7.Locked=true
+PB7.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F0x0 Value Line
 PCC.MCU=STM32F030C8Tx
@@ -92,20 +100,6 @@ PCC.Seq0=0
 PCC.Series=STM32F0
 PCC.Temperature=25
 PCC.Vdd=3.6
-PF0-OSC_IN.Mode=HSE-External-Oscillator
-PF0-OSC_IN.Signal=RCC_OSC_IN
-PF1-OSC_OUT.Mode=HSE-External-Oscillator
-PF1-OSC_OUT.Signal=RCC_OSC_OUT
-PF6.GPIOParameters=GPIO_Speed,GPIO_Label
-PF6.GPIO_Label=SI4438_SDN
-PF6.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PF6.Locked=true
-PF6.Signal=GPIO_Output
-PF7.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PF7.GPIO_Label=SI4438_nIRQ
-PF7.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PF7.Locked=true
-PF7.Signal=GPXTI7
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -148,8 +142,8 @@ RCC.SYSCLKFreq_VALUE=48000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
-SH.GPXTI7.0=GPIO_EXTI7
-SH.GPXTI7.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
 SPI1.CalculateBaudRate=6.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
@@ -163,7 +157,8 @@ TIM1.Period=1000
 TIM1.Prescaler=48-1
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
-USART2.IPParameters=VirtualMode-Asynchronous
+USART2.BaudRate=9600
+USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
